funcao de pesquisa

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -15,7 +15,7 @@
 				<h:outputText value="Realizar Login"/>
 			</f:facet>
 			<h:outputText value ="Login: "/>
-			<h:inputText value ="#{usuarioBean.usuario.login}"/>
+			<h:inputText value ="#{usuarioBean.usuario.username}"/>
 			
 			<h:outputText value ="Senha: "/>
 			<h:inputSecret value ="#{usuarioBean.usuario.senha}"/>
