--- a/src/main/webapp/paginaPrincipal.xhtml
+++ b/src/main/webapp/paginaPrincipal.xhtml
@@ -47,6 +47,7 @@
 		<h:commandButton value="Salvar" action="#{tarefaBean.salvar}"/>
 		<h:commandButton value="Deletar" action="#{tarefaBean.deletar}"/>
 		<h:commandButton value = "Editar" action="#{tarefaBean.editar}"/>
+		<h:commandButton value="pesquisar" action="#{tarefaBean.filtrar}"/>
 		
 		<h:dataTable value="#{tarefaBean.tarefas}" var="tarefa" border="2" cellpadding="5">
 		
