Sistema de login

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -23,7 +23,7 @@
 			
 			<h:commandButton value="Logar" action="#{usuarioBean.logar}"/>
 			ainda não tem uma conta?
-			<h:commandButton value="Criar Conta" action="#{usuarioBean.registrar}"/>
+			<h:commandButton value="Criar Conta" action="#{usuarioBean.cadastrar}"/>
 	</h:form>
 	 
 </body>
