implementacao de usuarios

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -5,11 +5,14 @@
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:a="http://xmlns.jcp.org/jsf/passthrough">
 <h:head>
+<h:outputStylesheet name="css/login-style.css"/>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>LoginPage</title>
 </h:head>
 <body>
 	<h:form id="formLogin" style="margin-top:20%; margin-left:40%">
+		
+			<h:message for=""/>
 			<h:panelGrid columns="2">
 			<f:facet name="header">
 				<h:outputText value="Realizar Login"/>
