--- a/src/main/webapp/paginaPrincipal.xhtml
+++ b/src/main/webapp/paginaPrincipal.xhtml
@@ -15,24 +15,22 @@
 	<h:outputText value="#{usuarioBean.nomeUsuario}" style="font-size:20px"/>
     <h:form>
         <h:commandButton value="Sair" action="#{usuarioBean.logout}" />
+        <h:commandButton value="Pesquisar Tarefas" action="#{usuarioBean.pesquisarTarefas}"/>
     </h:form>
-
 
 	<h:form id="formTarefa" style="margin-top:5%; margin-left:27%">
 		<h:panelGrid columns="2">
 		<f:facet name="header">
 			<h:outputText value="Adicionar tarefas"/>
 		</f:facet>
-		<h:outputText value ="id: "/>
-		<h:inputText value ="#{tarefaBean.tarefa.id}" readonly ="true"/>
-		
+
 		<h:outputText value ="Titulo: "/>
 		<h:inputText value ="#{tarefaBean.tarefa.titulo}"/>
  
 		<h:outputText value="Descrição: "/>
 		<h:inputText value="#{tarefaBean.tarefa.descricao}"/>
 		
-			    <h:outputLabel value="Deadline:" for="cmpDeadline" />
+			    <h:outputLabel value="Data limite:" for="cmpDeadline" />
 			    <h:inputText id="cmpDeadline" value="#{tarefaBean.tarefa.deadline}" a:type="date">
 			    	 <f:convertDateTime pattern="yyyy-MM-dd" timeZone="GMT-03:00"/>
 			    </h:inputText>
@@ -48,9 +46,7 @@
 		</h:panelGrid>
 		
 		<h:commandButton value="Salvar" action="#{tarefaBean.salvar}"/>
-		<h:commandButton value="Deletar" action="#{tarefaBean.deletar}"/>
 		<h:commandButton value = "Editar" action="#{tarefaBean.editar}"/>
-		<h:commandButton value="pesquisar" action="#{tarefaBean.filtrar}"/>
 		
 		<h:dataTable value="#{tarefaBean.tarefas}" var="tarefa" border="2" cellpadding="5">
 		
